[package]
name = "ext"
version = "0.1.0"
authors = ["Dexter Chua <dexter@math.harvard.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ext"
crate-type = ["cdylib"]

[dependencies]
rust_ext = { path = "../libraries/" }
fp = { path = "../libraries/fp" }
bivec = { path = "../libraries/bivec" }
serde_json = "1.0.0"
paste = "0.1"

[dependencies.pyo3]
git = "https://github.com/PyO3/pyo3"
rev = "31156671812579d01603d0765f3df6dd6f03e270"
features = ["extension-module"]
